System::arraycopy intrinsic doesn't mark mismatched loads

XMLWordPrintable

    • b110

      The assert

      # Internal Error (/opt/jprt/T/P1/211148.vlivanov/s/hotspot/src/share/vm/opto/memnode.cpp:1612), pid=19848, tid=19918
      # assert(!is_mismatched_access(con, loadbt)) failed: conbt=byte; loadbt=int

      was triggered in the nightly testing of 2016-02-29. The failing assert was added by JDK-8150543. The nightly run was using the binary from the JPRT job used to push JDK-8150543.

            Assignee:
            Vladimir Ivanov
            Reporter:
            Zoltan Majo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: